# Code

./: README.md
Fan/: .mxproject  SmartFan.ioc
Fan/Doc/: 01_BOM_器件选型.md  02_硬件连接_引脚映射.md  03_核心代码说明.md  04_电路自制与搭建注意事项.md  05_调试指南与测试方案.md  06_工程接入说明.md  07_产品说明.md  08_新增文件导入Keil_CubeMX指南.md  09_四线风扇_温湿度联合调速_修改方案.md  prompt.md
Fan/MDK-ARM/: SmartFan.uvoptx  SmartFan.uvprojx
G3507-BMI088-Pi/: CMakeLists.txt  README.md  完整使用命令.md  项目文件树与目录说明.md
G3507-BMI088-Pi/config/: gimbal.conf
G3507-BMI088-Pi/include/: application.hpp  bmi088.hpp  config.hpp  exit_status.hpp  gimbal_protocol.hpp  imu_types.hpp  low_pass_filter.hpp  mahony_filter.hpp  pid_controller.hpp  run_mode_policy.hpp  safety_state.hpp  signal_stop.hpp  uart_port.hpp  uart_tx_state_machine.hpp
G3507-BMI088-Pi/mspm0_protocol/: README.md  gimbal_protocol.c  gimbal_protocol.h  gimbal_safety_monitor.c  gimbal_safety_monitor.h  gimbal_stream_parser.c  gimbal_stream_parser.h
G3507-BMI088-Pi/src/: application.cpp  bmi088.cpp  config.cpp  gimbal_protocol.cpp  mahony_filter.cpp  main.cpp  pid_controller.cpp  run_mode_policy.cpp  safety_state.cpp  signal_stop.cpp  uart_port.cpp  uart_tx_state_machine.cpp
G3507-BMI088-Pi/tests/: test_attitude_uart.cpp  test_config.cpp  test_crc.cpp  test_exit_status.cpp  test_imu_conversion.cpp  test_mahony.cpp  test_mspm0_safety.cpp  test_mspm0_stream_parser.cpp  test_pid.cpp  test_protocol.cpp  test_safety_state.cpp  test_signal.cpp  test_uart_tx.cpp
G3507-BMI088-Pi/原始/: BMI088.md  BMI088二次审查整改与验证提示词.md  BMI088改进提示词.md  BMI088第三轮代码质量整改与验证.md  bsp_bmi088.c  bsp_bmi088.h
IR_Camera_F103C8T6/: .mxproject  IR_Camera_F103C8T6.ioc
IR_Camera_F103C8T6/MDK-ARM/: IR_Camera_F103C8T6.uvoptx  IR_Camera_F103C8T6.uvprojx
小车/: Project.uvoptx  Project.uvprojx
小车/Doc/: Hardware_System_说明.md
小车/Hardware/: Car.c  Key.c  Motor.c  PWMServo.c  PWMServo.h  Servo.c  Track.c  Ultrasound.c
小车/System/: Anticollision.c  Anticollision.h  TickFlag.c  TickFlag.h  Tracking.c  Tracking.h
小车/User/: main.c
空地code/: .gitignore  ANO_LX_FC.code-workspace  ANO_LX_FC.uvguix.ASUS  ANO_LX_FC.uvguix.Administrator  ANO_LX_FC.uvguix.Ellu  ANO_LX_FC.uvguix.fgo20  ANO_LX_FC.uvoptx  ANO_LX_FC.uvprojx  install-realsense.sh  openocd.cfg  readme.md
空地code/Car-main/: .gitignore  README.md
空地code/Doc/: 2021年植保飞行器.docx  380-2 (1).dxf  note.txt
空地code/DriversBsp/: Drv_BSP.c  Drv_UpFlow.c  Drv_UpFlow.h
空地code/FcSrc/: ANO_DT_LX.c  ANO_LX.c  Ano_Scheduler.c  LD_Radar.c  (+13 more)
(+495 files in other folders)
